--- a/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-docs-plugin/pom.xml
+++ b/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-docs-plugin/pom.xml
@@ -9,6 +9,7 @@
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>spring-cloud-dataflow-apps-docs-plugin</artifactId>
+	<name>spring-cloud-dataflow-apps-docs-plugin</name>
 	<packaging>maven-plugin</packaging>
 	<dependencies>
 		<dependency>
