[Apps Plugin CI] Include .asc signing files in release
Signed-off-by: Chris Bono <chris.bono@broadcom.com>

--- a/.github/stream-apps-release-files-spec.json
+++ b/.github/stream-apps-release-files-spec.json
@@ -21,6 +21,9 @@
                   "name": {"$match": "*.jar"}
                 },
                 {
+                  "name": {"$match": "*.asc"}
+                },
+                {
                   "name": {"$match": "*stream-applications-descriptor-*.stream-apps-kafka-maven"}
                 },
                 {
