--- a/.github/apps-plugin-release-files-spec.json
+++ b/.github/apps-plugin-release-files-spec.json
@@ -16,6 +16,9 @@
                 },
                 {
                   "name": {"$match": "*.jar"}
+                },
+                {
+                  "name": {"$match": "*.asc"}
                 }
               ]
             }
