Add gpg sign to stream apps
Signed-off-by: Chris Bono <chris.bono@broadcom.com>

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -25,6 +25,9 @@ jobs:
       ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
       ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
       JF_ARTIFACTORY_SPRING: ${{ secrets.JF_ARTIFACTORY_SPRING }}
+      GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+      GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+
     with:
       branch: 'main'
       verbose: ${{ inputs.verbose == 'true' }}
