--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -35,6 +35,8 @@ on:
       GH_ARC_PRIVATE_KEY:
       GH_ARC_PAT:
       JF_ARTIFACTORY_SPRING:
+      GPG_PASSPHRASE:
+      GPG_PRIVATE_KEY:
 
 env:
   VERBOSE: ${{ (github.debug || inputs.verbose) && 'true' || '' }}
@@ -42,6 +44,8 @@ env:
   MAVEN_THREADS: ${{ inputs.mavenThreads }}
   TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db,aquasec/trivy-db,ghcr.io/aquasecurity/trivy-db
   TRIVY_JAVA_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-java-db,aquasec/trivy-java-db,ghcr.io/aquasecurity/trivy-java-db
+  MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+  MAVEN_GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
 
 jobs:
   scan:
