[CI] Add GHA to deploy stream apps to central in "chunks".
Adds a workflow to deploy stream apps to Maven Central in logical
sections to avoid the upload limit imposed by Maven Central Portal
Publish API.

Signed-off-by: Chris Bono <chris.bono@broadcom.com>

--- a/.github/stream-apps-release-files-spec.json
+++ b/.github/stream-apps-release-files-spec.json
@@ -7,7 +7,7 @@
             {
               "@buildName": "${buildname}",
               "@buildNumber": "${buildnumber}",
-              "path": {"$match": "org*"}
+              "path": {"$match": "${appDirMatch}" }
             },
             {
               "$or": [
@@ -52,7 +52,7 @@
           ]
         }
       },
-      "target": "central_bundle/"
+      "target": "${targetDir}"
     }
   ]
 }
