[CI] Decrease runner size on GH workflows
This commit downsizes the GH action runner on a couple of workflows.
At one time, the increase is size was needed but that is no longer
the case.

Signed-off-by: Chris Bono <chris.bono@broadcom.com>

--- a/.github/workflows/apps-pluigin-release-maven-central.yml
+++ b/.github/workflows/apps-pluigin-release-maven-central.yml
@@ -23,7 +23,7 @@ env:
 
 jobs:
   deploy-to-maven-central:
-    runs-on: ubuntu22-8-32-OSS
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
         with:
