[CI] Remove release spec input on appsplugin workflow
This commit removes the `releaseSpecFile` input parameter from the
AppsPlugin release workflow. It is no longer needed since the stream
apps and apps plugin release jobs are seperate and they hardcode the
release spec file rather than accept a parameter.

Signed-off-by: Chris Bono <chris.bono@broadcom.com>

--- a/.github/workflows/apps-pluigin-release-maven-central.yml
+++ b/.github/workflows/apps-pluigin-release-maven-central.yml
@@ -9,12 +9,6 @@ on:
       buildNumber:
         description: "Artifactory build number"
         required: true
-      releaseSpecFile:
-        type: choice
-        description: "The AQL spec file for the release files"
-        options:
-          - '.github/stream-apps-release-files-spec.json'
-          - '.github/apps-plugin-release-files-spec.json'
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -43,7 +37,7 @@ jobs:
       - name: Download Release Files
         run: |
           jfrog rt download \
-          --spec ${{ inputs.releaseSpecFile }} \
+          --spec '.github/apps-plugin-release-files-spec.json' \
           --spec-vars "buildname=${{ inputs.buildName }};buildnumber=${{ inputs.buildNumber }}"
 
       - name: Deploy to Maven Central
