[CI] Fix trivy scan in common.yml
Increases the timeout for Trivy scan to 120 min as it is failing to resolve
dependencies w/in the default timeout.

Also updates the version of Trivy to `v0.69.1` as there were supposed to be
some network/timeout related fixes in there.

Signed-off-by: Chris Bono <chris.bono@broadcom.com>

--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -62,6 +62,8 @@ jobs:
           exit-code: 1
           trivyignores: .trivyignore
           skip-dirs: 'spring-cloud-dataflow-apps-plugin/**'
+          timeout: '120m'
+          version: 'v0.69.1'
       - name: 'Scanned'
         shell: bash
         run: echo "::info ::Scanned"
